--- a/themes/hugo-hero-theme/assets/scss/style.scss
+++ b/themes/hugo-hero-theme/assets/scss/style.scss
@@ -1,5 +1,5 @@
 // Font
-@import url('https://fonts.googleapis.com/css?family=Lato:400|Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:400|Open+Sans:400,700|Source+Sans+Pro:300,400|Source+Serif+Pro:400,700');
 
 // Bootstrap
 @import 'bootstrap/functions';
