First round of changes to the site structure

--- a/themes/hugo-hero-theme/assets/scss/style.scss
+++ b/themes/hugo-hero-theme/assets/scss/style.scss
@@ -69,6 +69,9 @@
 @import 'pages/services/service-summary';
 @import 'pages/work/work-summary';
 @import 'pages/work/page-work-single';
+@import 'pages/about/page-about-list';
+@import 'pages/about/page-about-single';
+@import 'pages/about/about-summary';
 
 // Display breakpoints for DEV
 // body:after {
