--- a/layouts/index.html
+++ b/layouts/index.html
@@ -39,19 +39,21 @@
   </div>
 </div>
 {{ end }}
--->
+ -->
 
-<div id="home" class="container pt-8 pb-8 pt-md-10 pb-md-10">
-  <div class="row justify-content-center">
-    {{ range .Site.Data.features }}
-    <div class="col-12 col-md-6 col-lg-3 mb-2">
-      <div class="feature">
-        {{ if .image }}<div class="feature-image"><img alt="{{ .title }} logo" src="{{ $.Site.BaseURL }}{{ .image }}" /></div> {{ end }}
-        <h2 class="feature-title">{{ .title }}</h2>
-        <div class="feature-content">{{ .description }}</div>
+<div class="bg-secondary ">
+  <div id="home" class="container pt-2 pb-2 pt-md-2 pb-md-2">
+    <div class="row justify-content-center">
+      {{ range .Site.Data.features }}
+      <div class="col-12 col-md-6 col-lg-3 mb-2">
+        <div class="feature">
+          {{ if .image }}<div class="feature-image"><img alt="{{ .title }} logo" src="{{ $.Site.BaseURL }}{{ .image }}" /></div> {{ end }}
+          <h2 class="feature-title">{{ .title }}</h2>
+          <div class="feature-content">{{ .description }}</div>
+        </div>
       </div>
+      {{end}}
     </div>
-    {{end}}
   </div>
 </div>
 
