--- a/assets/scss/components/_feature.scss
+++ b/assets/scss/components/_feature.scss
@@ -40,4 +40,28 @@
       }
     }
   }
+  .service-content {
+    margin-bottom: 0;
+    margin-top: auto;
+    p {
+      margin: 0;
+      strong {
+        color: $secondary;
+        text-transform: uppercase;
+        font-size: 0.8rem;
+        font-weight: 700;
+      }
+      em {
+        color: $secondary;
+        font-style: normal;
+        font-weight: 700;
+      }
+    }
+  }
+  .service-title {
+    font-size: 1.5rem;
+    line-height: 1.2; 
+    font-weight: 700;
+    color: $secondary;   
+  }
 }
