--- a/layouts/services/list.html
+++ b/layouts/services/list.html
@@ -17,16 +17,18 @@
 </div>
 {{ end }}
 
+<hr/>
 
 <div class="container pb-2 pt-2 pb-md-4 pt-md-4">
   <div class="row">
     {{ range .Pages.ByWeight }}
-    <div class="col-12 col-md-6 mb-2 ">{{ .Render "summary" }}</div>
+    <div class="col-4 col-md-4 mb-2 ">{{ .Render "summary" }}</div>
     {{ end }}
   </div>
 </div>
 
 <!-- Display the 'in action' section (stored in the works section) -->
+<!-- DO NOT DISPLAY ANYMORE
 <div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('{{ .Params.background | relURL }}');">
   <div class="container pt-4 pb-8">
     <div class="row">
@@ -41,5 +43,6 @@
     </div>
   </div>
 </div>
+-->
 
 {{ end }}
