--- a/assets/scss/components/_feature.scss
+++ b/assets/scss/components/_feature.scss
@@ -2,17 +2,15 @@
   height: 100%;
   /* border: 2px solid #eaeaea; */
   padding: 20px;
-  background-color: #ffffff;
   display: flex;
   align-items: center;
   flex-direction: column;
   text-align: center;
   .feature-image {
     flex: 0 0 auto;
-    width: 80px;
-    height: 80px;
+    width: 180px;
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: 8px;
     text-align: center;
   }
   img {
@@ -20,6 +18,7 @@
     height: auto;
   }
   .feature-title {
+	color: #ffffff;
     font-size: 1.5rem;
     line-height: 1.2;
   }
