--- a/layouts/services/summary.html
+++ b/layouts/services/summary.html
@@ -8,7 +8,8 @@
     <h2 class="service-title">
       <a href="{{ .Permalink }}">{{ .Title }}</a>
     </h2>
-    <!-- Display the first 120 characters of the page content -->
-    {{ .Content | truncate 120 "..." }}
+    <p>{{ .Params.description }}</p>
+    <!-- Display the first 120 characters of the page content
+    {{ .Content | truncate 120 "..." }} -->
   </div>
 </div>
