--- a/layouts/services/list.html
+++ b/layouts/services/list.html
@@ -4,13 +4,15 @@
 
 {{ define "main" }}
 
-{{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}
+{{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .Params.heroHeight "height" .)}}
 {{ if .Content }}
 <div class="container pt-2 pt-md-4 pb-2 pb-md-2">
   <div class="row">
     <div class="col-12">
-      <div class="page-intro">
-        {{ .Content }}
+      <div class="content">
+        <div class="page-intro">
+          {{ .Content }}
+        </div>
       </div>
     </div>
   </div>
@@ -22,7 +24,7 @@
 <div class="container pb-2 pt-2 pb-md-4 pt-md-4">
   <div class="row">
     {{ range .Pages.ByWeight }}
-    <div class="col-4 col-md-4 mb-2 ">{{ .Render "summary" }}</div>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-2 mb-2">{{ .Render "summary" }}</div>
     {{ end }}
   </div>
 </div>
