--- a/assets/scss/components/_hero-image.scss
+++ b/assets/scss/components/_hero-image.scss
@@ -21,9 +21,10 @@
     color: #ffffff;
     margin: auto 0;
     h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
+      font-weight: 700;
       @include media-breakpoint-up(md) {
-        font-size: 4rem;
+        /*font-size: 2.5rem;*/
         width: 80%;
       }
     }
@@ -34,21 +35,22 @@
       }
     }
     p {
-      font-size: 1.6rem;
-      line-height: 1.3;
+      font-size: 1.3rem;
+      line-height: 1.2;
+      font-weight: 300;
       @include media-breakpoint-up(md) {
-        font-size: 1.6rem;
+        /*font-size: 1.6rem;*/
         width: 60%;
       }
     }
     strong {
-      color: blue;
-      font-size: 6rem;
+      /*color: blue;*/
+      /*font-size: 6rem;*/
       font-weight: 600;
-      @include media-breakpoint-up(md) {
+      /*@include media-breakpoint-up(md) {
         font-size: 1.6rem;
         width: 60%;
-      }
+      }*/
     }
   }
   .hero-down {
@@ -63,12 +65,21 @@
     text-transform: uppercase;
     font-weight: normal;
   }
+  .icon-image {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
 }
 .hero-image-fullscreen {
   height: 100vh;
 }
 .hero-image-setheight {
-  height: 460px;
+  height: 300px;
 }
 .hero-image-blend-overlay {
   background-blend-mode: overlay;
