--- a/assets/scss/pages/about/_about-summary.scss
+++ b/assets/scss/pages/about/_about-summary.scss
@@ -1,6 +1,6 @@
 .about-summary {
   display: flex;
-  border: 2px solid #eaeaea;
+  /*border: 2px solid #eaeaea;*/
   padding: 20px;
   align-items: center;
   flex-direction: column;
@@ -9,7 +9,7 @@
     flex: 0 0 40px;
     width: 80px;
     height: 80px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     img {
       max-width: 100%;
       height: auto;
@@ -19,12 +19,13 @@
     flex: 1;
     .about-title {
       font-family: $font-family-heading;
-      font-size: 1.5rem;
+      font-size: 1.3rem;
+      font-weight: $font-weight-bold;
     }
     p {
       color: #666;
       font-size: 0.9rem;
-      width: 90%;
+      font-weight: $font-weight-light;
     }
   }
 }
