--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -6,10 +6,10 @@
 
 <!-- REMOVE THE HEADER FOR THIS PAGE -->
 <!--{{ partial "hero-image-fullscreen.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}-->
-<div class="strip bg-cover bg-position-center bg-overlay pt-15 pb-6" style="background-image: url(' {{ .Params.background | relURL }} ');">
+<div class="strip bg-cover bg-position-center bg-overlay pt-15 pb-2" style="background-image: url(' {{ .Params.background | relURL }} ');">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-md-12 content">
           {{ .Content }}
           {{ if .Params.button }}
           <a class="button button-primary" href="{{ .Params.buttonLink | relURL }}">{{ .Params.button}}</a>
@@ -18,10 +18,11 @@
     </div>
   </div>
 </div> 
+<hr/>
 
 {{ $about := where (where .Site.RegularPages "Type" "about") ".Params.featured" true }}
 {{if gt (len $about) 0}}
-<div class="container pt-6 pb-6 pb-md-8 pt-md-8">
+<div class="container pt-2 pb-2 pb-md-2 pt-md-2">
   <div class="row justify-content-start">
     {{ range .Pages.ByWeight }}
     <div class="col-12 col-md-4 mb-1">
