--- a/layouts/about/summary.html
+++ b/layouts/about/summary.html
@@ -1,14 +1,14 @@
 <div class="about about-summary">
   {{ if .Params.icon }}
   <div class="about-image">
-    <img src="{{ .Site.BaseURL }}{{ .Params.icon }}"/>
+    <a href="{{ .Permalink }}"><img src="{{ .Site.BaseURL }}{{ .Params.icon }}"/></a>
   </div>
   {{ end }}
   <div class="about-content">
-    <h2 class="about-title">
+    <div class="about-title">
       <a href="{{ .Permalink }}">{{ .Title }}</a>
-    </h2>
-    {{ .Params.description }}
+    </div>
+    <p>{{ .Params.description }}</p>
     <!-- Display the first 120 characters of the page content
     {{ .Content | truncate 120 "..." }} -->
   </div>
