minor changes from Matthew & Serena

--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -19,8 +19,9 @@ $grid-gutter-width: 20px;
 
 $white: #ffffff;
 $black: #000000;
-$primary: #3A7F8D; // Seamless Blue
+$primary: #216E93; // Seamless Blue
 $secondary: #51514F; // Seamless Grey
+$ltgrey: #e5e5e5;
 
 // Links
 $link-color: $primary;
