--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,7 @@
  -->
 
 
-<div class="bg-secondary ">
+<div class="bg-ltgrey ">
   <div id="home" class="container pt-2 pb-1 pt-md-2 pb-md-1">
     <div class="row justify-content-center">
       {{ range .Site.Data.features }}
