--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -4,8 +4,7 @@
 
 {{ define "main" }}
 
-<!-- REMOVE THE HEADER FOR THIS PAGE -->
-<!--{{ partial "hero-image-fullscreen.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}-->
+{{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}
 <div class="strip bg-cover bg-position-center bg-overlay pt-15 pb-2" style="background-image: url(' {{ .Params.background | relURL }} ');">
   <div class="container">
     <div class="row">
