updated the getting started page

--- a/layouts/partials/work-step-4.html
+++ b/layouts/partials/work-step-4.html
@@ -1,12 +1,14 @@
-<div class="strip pt-4 pb-4">
+<div class="strip pt-2 pb-2">
   <div class="container">
     <div class="row content">
-      <h1>Tell your users</h1>
+      <h1>4. Tell your users</h1>
     </div>
     <div class="row ">
       <div class="col-2"></div>
       <div class="col-10 content">
+      <p>Once you have connected to the SeamlessAccess service, you are going to want to let others know about it.</p>
       <p><strong>Who does this work?</strong> This work is likely done by your communications or marketing team. It's a great idea to get this group involved early in the project so they are ready to talk about the connection when it is ready</p>
+      <p><a href="">more ></a></p>
       </div>
     </div>
   </div>
