--- a/assets/scss/components/_work-step.scss
+++ b/assets/scss/components/_work-step.scss
@@ -1,11 +1,12 @@
 .work-step {
-  height: 100%;
-  padding: 20px;
+  /*height: 100%;*/
+  padding: 5px;
   display: flex;
-  align-items: right;
   flex-direction: column;
-  text-align: center;
+  /*align-items: center;*/
+  /*text-align: center;*/
   .step-title {
+      text-align: center;
       color: $ltgrey;
       font-weight: $font-weight-bold;
       font-size: 3rem;
@@ -14,8 +15,9 @@
   .step-content {
     /*margin-bottom: auto;
     margin-top: 0;*/
+    text-align: center;
     color: $secondary;
-    font-weight: font-weight-bold;
+    font-weight: $font-weight-bold;
     font-size: 1.2rem;
     line-height: 1.1;
     /*position: relative;*/
@@ -33,4 +35,70 @@
       }
     }
   }
+  .step-image {
+    width: 180px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 8px;
+    @include media-breakpoint-up(md) {
+      max-width: 100%;
+    }
+    img {
+      width: 100%;
+      height: auto;
+    }         
+  }
 }
+
+.flavor {
+  /*height: 100%;*/
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  /*align-items: center;*/
+  /*text-align: center;*/
+  .flavor-title {
+      text-align: center;
+      color: $primary;
+      font-weight: $font-weight-bold;
+      font-size: 1.5rem;
+      line-height: 1.1;
+  }
+  .flavor-description {
+    /*margin-bottom: auto;
+    margin-top: 0;*/
+    text-align: left;
+    color: $secondary;
+    font-weight: $font-weight-light;
+    font-size: 1rem;
+    line-height: 1.1;
+    /*position: relative;*/
+    p {
+      margin: 0;
+      strong {
+        /*color: $secondary;*/
+        text-transform: uppercase;
+        font-size: 0.8rem;
+        font-weight: font-weight-bold;
+      }
+      em {
+        /*color: $primary;*/
+        font-style: normal;
+      }
+    }
+  }
+  .flavor-image {
+    width: 180px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 8px;
+    @include media-breakpoint-up(md) {
+      max-width: 100%;
+    }
+    img {
+      width: 100%;
+      height: auto;
+    }         
+  }
+}
+
