--- a/layouts/partials/work-step-3.html
+++ b/layouts/partials/work-step-3.html
@@ -1,7 +1,15 @@
-<div class="strip pt-4 pb-4">
+<div class="strip pt-2 pb-2">
   <div class="container">
     <div class="row content">
-      <h1>Implement the service</h1>
+      <h1>3. Implement the service</h1>
+    </div>
+    <div class="row ">
+      <div class="col-2"></div>
+      <div class="col-10 content">
+      <p>You will be doing some software development work based on your selected flavor, and then register your service to get connected.</p>
+      <p><strong>Who does this work?</strong> This work is done by someone who configures your access systems for your site and the person/team that modifies the pages where sign in happens will make this change. This may be a system administrator, a software interface designer, or it could be a software developer. In some cases this work may be done by a vendor or consultant. The SeamlessAccess team will help you to identify the right person.</p>
+      <p><a href="">more ></a></p>
+      </div>
     </div>
   </div>
 </div>
