--- a/layouts/partials/work-step-1.html
+++ b/layouts/partials/work-step-1.html
@@ -8,7 +8,7 @@
       <div class="col-10 content">
       <p>How does your system supported federated authentication?</p>
       <p><strong>Who does this work?</strong> This information will be gathered from several different people and probably will be coordinated by a project manager. During this phase of the work you will be working closely with the SeamlessAccess team who will help you interpret the information you have gathered and what it means to your organization. Based on this information, we will also be able to estimate time and resource requirements to make your site SeamlessAccess enabled.</p>
-      <p><a href="">more ></a></p>
+      <p><a href="step1">more ></a></p>
       </div>
     </div>
   </div>
