--- a/layouts/partials/work-step-4.html
+++ b/layouts/partials/work-step-4.html
@@ -8,7 +8,7 @@
       <div class="col-10 content">
       <p>Once you have connected to the SeamlessAccess service, you are going to want to let others know about it.</p>
       <p><strong>Who does this work?</strong> This work is likely done by your communications or marketing team. It's a great idea to get this group involved early in the project so they are ready to talk about the connection when it is ready</p>
-      <p><a href="">more ></a></p>
+      <p><a href="step4">more ></a></p>
       </div>
     </div>
   </div>
