--- a/layouts/partials/work-step-5.html
+++ b/layouts/partials/work-step-5.html
@@ -6,8 +6,8 @@
     <div class="row ">
       <div class="col-2"></div>
       <div class="col-10 content">
-      <p>You've done the work, so we'd love to hear about how it is going and how you found your experience.</p>
-      <p><a href="">more ></a></p>
+      <p>Registration for use of the SeamlessAccess service is required for Service Provides that want to start using the "Advanced" flavor. Those using the "Limited" and "Basic" flavor also are highly encouraged to register their integration to remain informed of updates and to be listed as an active integration on our site. You've done the work; we would enjoy hearing how it went and how you found your experience.</p>
+      <p><a href="step5">more ></a></p>
       </div>
     </div>
   </div>
