--- a/themes/hugo-hero-theme/assets/scss/style.scss
+++ b/themes/hugo-hero-theme/assets/scss/style.scss
@@ -63,6 +63,7 @@
 @import 'components/hero-image';
 @import 'components/bg';
 @import 'components/work-step';
+@import 'components/syntax';
 
 // Pages
 @import 'pages/services/page-services-list';
