--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -75,7 +75,7 @@
     </div>
     <div class="row content">
       <div class="col-2"></div>
-      <p><a href="">more ></a></p>
+      <p><a href="step2">more ></a></p>
     </div>
   </div>
 </div>
