--- a/layouts/contact/contact.html
+++ b/layouts/contact/contact.html
@@ -17,10 +17,15 @@
     <div class="col-12 col-md-8">
       {{ .Content }}
       <ul>
+        <!-- Only include the phone if it is present -->
+        {{ if .Site.Data.contact.phone }}
+          <li><strong>Phone: </strong>{{ .Site.Data.contact.phone }}</li>
+        {{ end }}
         <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
-            {{ .Site.Data.contact.email }}</a></li>
+        {{ .Site.Data.contact.email }}</a></li>
+        <!-- Only include the address if it is present -->
         {{ if .Site.Data.contact.address }}
-        <li><strong>Address: </strong>{{ .Site.Data.contact.address }}</li>
+          <li><strong>Address: </strong>{{ .Site.Data.contact.address }}</li>
         {{ end }}
       </ul>
     </div>
