--- a/themes/hugo-hero-theme/layouts/partials/social.html
+++ b/themes/hugo-hero-theme/layouts/partials/social.html
@@ -1,17 +1,36 @@
 <ul id="social" class="social">
-  <!--<li>
-    <a class="fab fa-linkedin" href="{{ .Site.Data.social.linkedin }}" target="blank"></a>
-  </li>
-  <li>
-    <a class="fab fa-medium" href="{{ .Site.Data.social.medium }}" target="blank"></a>
-  </li>-->
+  {{ if .Site.Data.social.twitter }}
   <li>
     <a class="fab fa-twitter" href="{{ .Site.Data.social.twitter }}" target="blank"></a>
   </li>
-  <!--<li>
+  {{ end }}
+  {{ if .Site.Data.social.youtube }}
+  <li>
+    <a class="fab fa-youtube" href="{{ .Site.Data.social.youtube }}" target="blank"></a>
+  </li>
+  {{ end }}
+  {{ if .Site.Data.social.instagram }}
+  <li>
     <a class="fab fa-instagram" href="{{ .Site.Data.social.instagram }}" target="blank"></a>
   </li>
+  {{ end }}
+  {{ if .Site.Data.social.linkedin }}
+  <li>
+    <a class="fab fa-linkedin" href="{{ .Site.Data.social.linkedin }}" target="blank"></a>
+  </li>
+  {{ end }}
+  {{ if .Site.Data.social.medium }}
+  <li>
+    <a class="fab fa-medium" href="{{ .Site.Data.social.medium }}" target="blank"></a>
+  </li>
+  {{ end }}
+  {{ if .Site.Data.social.facebook }}
+  <li>
+    <a class="fab fa-facebook" href="{{ .Site.Data.social.facebook }}" target="blank"></a>
+  </li>
+  {{ end }}  {{ if .Site.Data.social.orcid }}
   <li>
     <a class="fab fa-orcid" href="{{ .Site.Data.social.orcid }}" target="blank"></a>
-  </li>  -->
+  </li>
+  {{ end }}
 </ul>
