--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,5 +1,5 @@
 {{ define "header_css" }}{{ end }}
-{{ define "body_classes" }}page-pages-single{{ end }}
+{{ define "body_classes" }}page-posts-single{{ end }}
 {{ define "header_classes" }}{{ end }}
 
 {{ define "main" }}
