--- a/themes/hugo-hero-theme/assets/scss/style.scss
+++ b/themes/hugo-hero-theme/assets/scss/style.scss
@@ -10,7 +10,7 @@
 @import 'bootstrap/reboot';
 @import 'bootstrap/grid';
 @import 'bootstrap/type';
-@import 'bootstrap/tables';
+// @import 'bootstrap/tables';
 // @import "bootstrap/images";
 // @import "bootstrap/code";
 // @import "bootstrap/forms";
@@ -80,6 +80,9 @@ $fa-font-path: "../../fonts/fontawesome5";
 @import 'pages/about/page-about-list';
 @import 'pages/about/page-about-single';
 @import 'pages/about/about-summary';
+@import 'pages/posts/page-posts-list';
+@import 'pages/posts/page-posts-single';
+@import 'pages/posts/post-summary';
 
 // Display breakpoints for DEV
 // body:after {
