add table & image styling to the general content styling

--- a/assets/scss/components/_content.scss
+++ b/assets/scss/components/_content.scss
@@ -62,6 +62,26 @@
       font-weight: $font-weight-normal;
     }
   }
+  .table {
+    td {
+      border: 1px solid #ddd; 
+      padding: 8px; 
+    }
+
+    th {
+      border: 1px solid #ddd; 
+      padding: 8px;
+      padding-bottom: 12px; 
+      padding-top: 12px; 
+      background-color: #05bf85; 
+      color: white; 
+      font-weight: bold;
+    }
+  }
+  .img {
+    max-width: 100%;
+    height: auto;
+  }
   .page-intro {
     max-width: 70%;
     margin: auto;
