--- a/themes/hugo-hero-theme/assets/scss/style.scss
+++ b/themes/hugo-hero-theme/assets/scss/style.scss
@@ -63,7 +63,7 @@
 @import 'components/hero-image';
 @import 'components/bg';
 @import 'components/work-step';
-// @import 'components/syntax';
+@import 'components/syntax';
 
 // Font Awesome
 $fa-font-path: "../../fonts/fontawesome5";
