--- a/assets/scss/pages/posts/_page-posts-single.scss
+++ b/assets/scss/pages/posts/_page-posts-single.scss
@@ -37,7 +37,7 @@
     }
   }
   .content {
-    .table {
+    table {
       td {
         border: 1px solid #ddd; 
         padding: 8px; 
@@ -53,7 +53,7 @@
         font-weight: bold;
       }
     }
-    .img {
+    img {
       @include img-fluid();
       max-width: 100%;
       height: auto;
