--- a/assets/scss/pages/posts/_page-posts-single.scss
+++ b/assets/scss/pages/posts/_page-posts-single.scss
@@ -48,7 +48,7 @@
         padding: 8px;
         padding-bottom: 12px; 
         padding-top: 12px; 
-        background-color: #05bf85; 
+        background-color: $primary; 
         color: white; 
         font-weight: bold;
       }
