Small formatting updates

--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -50,6 +50,7 @@
 <!-- List the steps - section 1 -->
 {{ partial "work-step-1.html" (dict "detaillink" .Params.linkStep1) .}}
 
+<!-- Section 2 - the implementation flavors -->
 <div class="strip pt-2 pb-2">
   <div class="container">
     <div class="row content">
