Initial footer layout.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,3 +14,146 @@
     </div>
   </div>
 </div>
+
+<footer class="main-footer ph5-ns pt1 pb4 white">
+  <div class="center pt3">
+    <div class="flex-ns">
+      <div class="ph3 w-25-ns pv2">
+        <img class="footer-logo pb3" alt="SeamlessAcces Logo" src="/img/SeamlessFooterLogo.svg"/>
+        <br/>
+        <p>
+          SeamlessAccess enables true Sign On. Your users will be able to sign in using
+          their preferred sign in credentials, and will not be bothered for them again
+          for all SeamlessAccess-enabled sites.
+        </p>
+      </div>
+
+      <div class="w-25-ns pv2">
+        <h3 class="ph3 f4 b lh-title mb1 primary border-left-white pb1">
+          <a href="https://seamlessaccess.org/services/" class="link">The Service</a>
+        </h3>
+        <ul class="ph3 mb1 border-left-white">
+          <li><a href="https://seamlessaccess.org/services/for-service-providers/" class="link">SeamlessAccess for Service Providers</a></li>
+          <li><a href="https://seamlessaccess.org/services/for-libraries/" class="link">SeamlessAccess for Libraries</a></li>
+          <li><a href="https://seamlessaccess.org/services/for-identity-providers/" class="link">SeamlessAccess for Identity Providers</a></li>
+          <li><a href="https://seamlessaccess.org/services/for-federations/" class="link">SeamlessAccess for R&E Federation Operators</a></li>
+          <li><a href="https://seamlessaccess.org/services/for-researchers/" class="link">SeamlessAccess for Researchers</a></li>
+          <li><a href="https://seamlessaccess.org/services/for-research_collab" class="link">SeamlessAccess for Research Collaborations</a></li>
+        </ul>
+      </div>
+
+      <div class="w-25-ns pv2">
+        <h3 class="ph3 f4 b lh-title mb1 primary border-left-white pb1">
+          <a href="https://seamlessaccess.org/about/" class="link">About</a>
+        </h3>
+        <ul class="ph3 mb1 border-left-white">
+          <li><a href="https://seamlessaccess.org/about/governance/" class="link">Governance and Funding</a></li>
+          <li><a href="https://seamlessaccess.org/about/community/" class="link">Community</a></li>
+          <li><a href="https://seamlessaccess.org/about/trust/" class="link">Privacy and Trust</a></li>
+          <li><a href="https://seamlessaccess.org/posts/" class="link">News</a></li>
+        </ul>
+        <br>
+        <h3 class="ph3 f4 b lh-title mb1 primary border-left-white pb1">
+          <a href="https://seamlessaccess.org/about/" class="link">FAQ</a>
+        </h3>
+      </div>
+
+      <div class="w-25-ns pv2">
+        <h3 class="ph3 f4 b lh-title mb1 primary border-left-white pb1">
+          <a href="https://seamlessaccess.org/work/" class="link">Getting Started</a>
+        </h3>
+        <ul class="ph3 mb1 border-left-white">
+          <li><a href="https://seamlessaccess.org/work/step1/" class="link">Gather Information</a></li>
+          <li><a href="https://seamlessaccess.org/work/step2/" class="link">Select Your Implementation</a></li>
+          <li><a href="https://seamlessaccess.org/work/step3/" class="link">Implement the Service</a></li>
+          <li><a href="https://seamlessaccess.org/work/step4/" class="link">Tell Your Users</a></li>
+          <li><a href="https://seamlessaccess.org/work/step5/" class="link">Tell Us About It</a></li>
+        </ul>
+        <br>
+        <h3 class="ph3 f4 b lh-title mb1 primary border-left-white pb1">
+          <a href="https://seamlessaccess.org/work/" class="link">Documentation</a>
+        </h3>
+      </div>
+    </div>
+  </div>
+</footer>
+<footer class="center sub-footer pa3 center">
+  <div class="flex-ns justify-between">
+
+    <div>
+      <p class="mv2 mv0-ns">© 2020 All Rights Reserved <strong>SeamlessAccess</strong></p>
+    </div>
+
+    <div>
+      <p class="mv2 mv0-ns">
+				<span class="mh3">
+					<a href="/contact"><strong>CONTACT</strong></a>
+				</span>
+        <span class="mh1"><i class="fab fa-twitter"></i></span>
+        <span class="mh2"><i class="fab fa-youtube"></i></span>
+      </p>
+    </div>
+
+  </div>
+</footer>
+
+<style>
+  a:focus {
+    box-shadow: none;
+    outline: none
+  }
+  .main-footer {
+    font-size: 14px;
+    background: #216E93;
+    color: white;
+  }
+
+  .main-footer .primary, .main-footer a.primary {
+    color: white;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+  }
+
+  .footer-logo {
+    max-width: 100px;
+  }
+
+  .main-footer .link {
+    font-size: 14px;
+    line-height: 0;
+  }
+
+  .main-footer li {
+    padding: 4px 0;
+  }
+
+  .sub-footer {
+    font-size: 14px;
+    background: #2E2E2E;
+    color: white;
+  }
+
+  .sub-footer p {
+    text-align: center;
+  }
+
+  .sub-footer a {
+    font-size: 14px;
+    text-decoration: none;
+  }
+
+  .border-left-white {
+    border-left: none;
+  }
+
+  @media screen and (min-width: 50em) {
+    .border-left-white {
+      border-left: 1px solid rgba(229, 229, 229, 0.4);
+    }
+
+    .sub-footer p {
+      text-align: left;
+    }
+  }
+</style>
